--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 .container {
     background-color: white;
     padding: 2rem;
+    border: 0.1rem solid black;
     border-radius: 1rem;
     min-height: 40vh;
     min-width: 35vh;
